# rust_book14

./: .gitignore  Cargo.toml  README.md  index.html
doc/0.1.0/: all.html  crates.js  fn.get_first_or_else.html  fn.get_first_or_error.html  fn.get_first_or_panic.html  help.html  search-index.js  settings.html  source-files.js
doc/0.1.0/rust_book14/: fn.get_first_or.html  index.html  sidebar-items.js
doc/0.1.0/rust_book14/slices/: fn.get_first_or_else.html  index.html  sidebar-items.js
doc/0.1.0/src/rust_book14/: lib.rs.html
src/: lib.rs  main.rs
