[package]
name = "rust_book14"
description = "Publish library on crates.io."
version = "0.1.0"
authors = ["Stanley Wintergreen <kepocnhh@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/kepocnhh/rust_book14"
publish = true
edition = "2021"
rust-version = "1.66.0"
